# 10_lang_translator

./: .env  pyproject.toml
src/agent/: main.py
